--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,9 @@
-const html = (title, totalContacts) => {
-  return Buffer.from(`
 <html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>${title}</title>
+  <title>Lab node</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -282,9 +280,8 @@ const html = (title, totalContacts) => {
   <div class="container-fluid sticky-top" style="background-color: #6162F2;">
     <nav class="navbar navbar-expand-md navbar-dark container" style="background-color: #6162F2;">
       <a class="navbar-brand" href="#">
-        <img
-          src="https://i.pinimg.com/originals/af/f2/16/aff216eb233cd9fdb730f8f3e16159a7.jpg"
-          width="100" height="60" class="d-inline-block align-top" alt="">
+        <img src="https://i.pinimg.com/originals/af/f2/16/aff216eb233cd9fdb730f8f3e16159a7.jpg" width="100" height="60"
+          class="d-inline-block align-top" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -322,7 +319,7 @@ const html = (title, totalContacts) => {
   </div>
   <div class="bg-amarillo contenedor sombra">
     <form id="contacto" action="#">
-      <legend>Contáctenos, contamos con ${totalContacts} contactos en Lima <span>Todos los campos son obligatorios</span> </legend>
+      <legend>Contáctenos, contamos con contactos en Lima <span>Todos los campos son obligatorios</span> </legend>
 
       <div class="campos">
         <div class="campo">
@@ -375,7 +372,3 @@ const html = (title, totalContacts) => {
 </body>
 
 </html>
-`);
-};
-
-module.exports = html;
